# geode-template

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml  inspect-sdk.yml
cmake/: Geode.cmake
src/: main.cpp
